# graphql

./: docker-compose.yml  pyproject.toml
apps/cards/: admin.py
apps/cards/migrations/: 0001_initial.py
apps/decks/: admin.py  models.py
apps/decks/migrations/: 0001_initial.py
apps/schemas/: schema.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
