[tool.poetry]
name = "graphql"
version = "0.1.0"
description = ""
authors = ["Thiago Bomfim <thiago.bomfim@smartgreen.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.8.6"
graphene-django = "^2.15.0"
django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
